# nostr_data_market

./: .envrc  .secrets  Cargo.toml  flake.nix
migrations/: 20250221165527_users.up.sql  20250222112556_create-sensors-table.down.sql  20250222112556_create-sensors-table.up.sql  20250222132853_mqtt_raw.down.sql  20250222132853_mqtt_raw.up.sql
src/: main.rs
src/features/: mod.rs  nostr.rs  sensor.rs  user.rs  zbd.rs
src/queries/: mod.rs  sensor.rs  user.rs
src/rest/: mod.rs  shop.rs  user.rs
